# do

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: console.rs  dofile.rs  main.rs  operations.rs
src/operations/: run.rs
