[package]
name = "do-app"
description = "Alternative of make, without making anything."
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/siketyan/do"
repository = "https://github.com/siketyan/do.git"
authors = ["Naoki Ikeguchi <root@siketyan.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "do"
path = "src/main.rs"

[dependencies]
console = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
